--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
-
-# Symfony directories
-*/logs/*
-*/cache/*
+/web/bundles/
+/app/bootstrap*
+/app/cache/*
+/app/logs/*
+/vendor/
+/app/config/parameters.yml
 
