--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -5,6 +5,8 @@ jms_security_extra:
 security:
     encoders:
         Symfony\Component\Security\Core\User\User: plaintext
+        Sdz\UserBundle\Entity\User: sha512
+
 
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
@@ -17,7 +19,23 @@ security:
                     user:  { password: userpass, roles: [ 'ROLE_USER' ] }
                     admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
 
+        providers:
+            main:
+                id: fos_user.user_provider.username
     firewalls:
+        main:
+            pattern:        ^/
+            anonymous:      true
+            provider:       main
+            form_login:
+                login_path: fos_user_security_login
+                check_path: fos_user_security_check
+            logout:
+                path:       fos_user_security_logout
+                target:     /blog
+            remember_me:
+                key:        %secret%
+
         dev:
             pattern:  ^/(_(profiler|wdt)|css|images|js)/
             security: false
