--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -63,4 +63,4 @@ swiftmailer:
 fos_user:
     db_driver: orm
     firewall_name: main
-    user_class:    Sdz\UserBundle\Entity\User
+    user_class:    Musee\UserBundle\Entity\User
