--- a/src/Musee/CollectionBundle/Resources/config/routing.yml
+++ b/src/Musee/CollectionBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
-musee_collection_homepage:
-    pattern:  /hello/{name}
-    defaults: { _controller: MuseeCollectionBundle:Default:index }
+musee_collection_ajouter:
+    pattern:  /ajouter
+    defaults: { _controller: MuseeCollectionBundle:Collection:ajouterObjet }
