not working Admin interface

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -64,3 +64,6 @@ fos_user:
     db_driver: orm
     firewall_name: main
     user_class:    Musee\UserBundle\Entity\User
+    registration:
+        form: 
+            type: musee_user_registration
