--- a/src/Musee/UserBundle/Resources/config/services.yml
+++ b/src/Musee/UserBundle/Resources/config/services.yml
@@ -2,6 +2,8 @@ parameters:
 #    musee_user.example.class: Musee\UserBundle\Example
 
 services:
-#    musee_user.example:
-#        class: %musee_user.example.class%
-#        arguments: [@service_id, "plain_value", %parameter%]
+    musee_user.registration.form.type:
+        class: Musee\UserBundle\Form\Type\RegistrationFormType
+        arguments: [%fos_user.model.user.class%]
+        tags:
+            - { name: form.type, alias: acme_user_registration }
