--- a/src/Musee/SiteBundle/Resources/config/routing.yml
+++ b/src/Musee/SiteBundle/Resources/config/routing.yml
@@ -17,3 +17,9 @@ musee_contact:
 musee_infosPratiques:
     pattern: /infosPratiques
     defaults: { _controller: MuseeSiteBundle:Site:infosPratiques }
+
+musee_mail:
+    pattern: /mail
+    defaults: { _controller: MuseeSiteBundle:site:mail }
+    requirements:
+        _method:  GET|POST
