now using email address to login

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -18,7 +18,7 @@ security:
                 users:
                     user:  { password: userpass, roles: [ 'ROLE_USER' ] }
                     admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
-        main:
+        fos_userbundle:
             id: fos_user.user_provider.username
     firewalls:
         main:
