--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -19,12 +19,12 @@ security:
                     user:  { password: userpass, roles: [ 'ROLE_USER' ] }
                     admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
         fos_userbundle:
-            id: fos_user.user_provider.username
+            id: fos_user.user_provider.username_email
     firewalls:
         main:
             pattern:        ^/
             anonymous:      true
-            provider:       in_memory
+            provider:       fos_userbundle
             form_login:
                 login_path: fos_user_security_login
                 check_path: fos_user_security_check
