--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -51,6 +51,12 @@ doctrine:
         auto_generate_proxy_classes: "%kernel.debug%"
         auto_mapping: true
 
+# Stof\DoctrineExtensionBundle configuration
+stof_doctrine_extensions:
+    orm:
+        default:
+            sluggable: true
+
 # Swiftmailer Configuration
 swiftmailer:
     transport: "%mailer_transport%"
