--- a/src/Musee/CollectionBundle/Resources/config/routing.yml
+++ b/src/Musee/CollectionBundle/Resources/config/routing.yml
@@ -15,3 +15,7 @@ musee_collection_supprimer:
 musee_collection_modifier:
     pattern:  /modifier/{id}
     defaults: { _controller: MuseeCollectionBundle:Collection:modifierObjet }
+
+musee_collection_afficher:
+    pattern:  /afficher/{id}
+    defaults: { _controller: MuseeCollectionBundle:Collection:afficherObjet }
