--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -6,6 +6,8 @@ security:
     encoders:
         Symfony\Component\Security\Core\User\User: plaintext
         Musee\UserBundle\Entity\User: sha512
+        Musee\UserBundle\Entity\Adherent: sha512
+        Musee\UserBundle\Entity\Chercheur: sha512
 
 
     role_hierarchy:
@@ -14,15 +16,27 @@ security:
 
     providers:
         
+        musee_bdd:
+            chain:
+                providers: [musee_admin, musee_adherent, musee_chercheur]
+
         in_memory:
             memory:
                 users:
                     user:  { password: userpass, roles: [ 'ROLE_USER' ] }
                     admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
 
-        musee_bdd:
+        
+
+        musee_admin:
             entity: { class: MuseeUserBundle:User, property: username }
-       
+        
+        musee_adherent:
+            entity: { class: MuseeUserBundle:Adherent, property: username }
+
+        musee_chercheur:
+            entity: { class: MuseeUserBundle:Chercheur, property: username }
+
     firewalls:
 
         
