--- a/src/Musee/UserBundle/Resources/config/routing.yml
+++ b/src/Musee/UserBundle/Resources/config/routing.yml
@@ -6,9 +6,17 @@ musee_pageAdmin:
     pattern: /admin
     defaults: { _controller: MuseeUserBundle:Admin:pageAdmin }
 
-musee_create_user:
-    pattern: /user/create
-    defaults: { _controller: MuseeUserBundle:Registration:register }
+musee_create_user_admin:
+    pattern: /user/createAdmin
+    defaults: { _controller: MuseeUserBundle:Registration:registerAdmin }
+
+musee_create_user_adherent:
+    pattern: /user/createAdherent
+    defaults: { _controller: MuseeUserBundle:Registration:registerAdherent }
+
+musee_create_user_chercheur:
+    pattern: /user/createChercheur
+    defaults: { _controller: MuseeUserBundle:Registration:registerChercheur }
 
 login:
     pattern: /login
