--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -6,8 +6,6 @@ security:
     encoders:
         Symfony\Component\Security\Core\User\User: plaintext
         Musee\UserBundle\Entity\User: sha512
-        Musee\UserBundle\Entity\Adherent: sha512
-        Musee\UserBundle\Entity\Chercheur: sha512
 
 
     role_hierarchy:
@@ -16,24 +14,15 @@ security:
 
     providers:
         
-        musee_bdd:
-            chain:
-                providers: [musee_admin, musee_adherent, musee_chercheur]
+        musee_user:
+            entity: { class: MuseeUserBundle:User, property: username }
 
         in_memory:
             memory:
                 users:
                     user:  { password: userpass, roles: [ 'ROLE_USER' ] }
                     admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
-        musee_admin:
-            entity: { class: MuseeUserBundle:User, property: username }
         
-        musee_adherent:
-            entity: { class: MuseeUserBundle:Adherent, property: username }
-
-        musee_chercheur:
-            entity: { class: MuseeUserBundle:Chercheur, property: username }
-
     firewalls:
 
         
@@ -41,7 +30,7 @@ security:
         secured_area:
             pattern:    ^/
             anonymous: ~
-            provider:  musee_bdd
+            provider:  musee_user
             form_login:
                 check_path: /login_check
                 login_path: /login
